onux/apps/user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: cinacoin
  labels:
    app: user-service
spec:
  type: ClusterIP
  ports:
    - port: 3201
      targetPort: 3201
      protocol: TCP
      name: http
  selector:
    app: user-service
